# django_post_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
django_post_api/: asgi.py  settings.py  urls.py  wsgi.py
post/: admin.py  apps.py  models.py  serializers.py  translation.py  utils.py  views.py
post/management/commands/: createsuperuser_if_not_exists.py
post/migrations/: 0001_initial.py  0002_remove_post_content_remove_post_media_and_more.py  0003_alter_post_media_en_alter_post_media_zh.py  0004_posttag_post_posttag_post_tags.py  0005_alter_post_posttag_unique_together.py
